mobile context menu, alignment on Ios issue fix

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -256,7 +256,10 @@ input[type=text]:focus {
 }
 
 .contextButton {
-    display:none
+    @media(min-width: 768px) {
+        display:none
+    }
+    
 }
 
 
